Added a Java 9 Support. Deploy on DockerHub with Java 9